Fixed small bug, where the menu would overlap the scroll bar.

--- a/style/view/global.scss
+++ b/style/view/global.scss
@@ -46,7 +46,7 @@
   z-index: 20;
 
   width: 100vw;
-  height: 100vh;
+  height: #{'calc(100vh - ' + $global--menu-height + ')'};
 
   overflow-y: auto;
   overflow-x: hidden;
